--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -52,9 +52,9 @@ scp root@PARENT:/root/ssl-build/rhn-ca-openssl.cnf .
 
 
 [NOTE]
-.Known Limitation
+.Security notice
 ====
-The {susemgrproxy} functionality is only supported if the SSL certificate was signed by the same CA as the {productname} Server certificate.
+To keep the security chain intact, the {susemgrproxy} functionality requires the SSL certificate to be signed by the same CA as the {productname} Server certificate.
 Using certificates signed by different CAs for Proxies and Server is not supported.
 ====
 
